@@ -1,245 +1,272 @@
 package com.qros.modules.recommendation.service;
 
-import com.qros.modules.menu.dto.MenuItemResponse;
+import com.qros.modules.menu.model.Category;
 import com.qros.modules.menu.model.MenuItem;
 import com.qros.modules.menu.repository.MenuItemRepository;
 import com.qros.modules.order.repository.OrderItemRepository;
+import com.qros.modules.recommendation.dto.response.RecommendationResponse;
+import com.qros.modules.recommendation.mapper.RecommendationMapper;
+import com.qros.modules.recommendation.model.enums.RecommendationContext;
+import com.qros.modules.recommendation.model.enums.RecommendationType;
+import com.qros.shared.cache.CacheNames;
+import com.qros.shared.exception.BusinessException;
+import com.qros.shared.exception.ErrorCode;
+import java.text.Normalizer;
+import java.util.ArrayList;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Locale;
+import java.util.Map;
 import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
 import org.springframework.cache.annotation.Cacheable;
-import org.springframework.stereotype.Service;
-
-import java.util.*;
-import java.util.stream.Collectors;
-
-/**
- * RecommendationService - Intelligent item recommendation engine.
- * Uses historical order patterns and time-of-day context to suggest menu items.
- */
 import org.springframework.data.domain.PageRequest;
+import org.springframework.lang.NonNull;
+import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-@Slf4j
 @Service
 @RequiredArgsConstructor
 public class RecommendationService {
 
-    private final OrderItemRepository orderItemRepository;
+    private static final int DEFAULT_LIMIT = 5;
+    private static final int MAX_LIMIT = 20;
+
     private final MenuItemRepository menuItemRepository;
+    private final OrderItemRepository orderItemRepository;
+    private final RecommendationMapper recommendationMapper;
 
-    /**
-     * Suggests items that are frequently ordered alongside a specific item
-     * (Cross-sell).
-     * Falls back to popular items if no strong associations exist.
-     * 
-     * @param itemId Source menu item ID
-     * @param limit  Maximum number of recommendations
-     * @return List of suggested menu items
-     */
     @Transactional(readOnly = true)
-    @Cacheable(value = "recommendations", key = "'cross_' + #itemId + '_' + #limit")
-    public List<MenuItemResponse> getCrossSellRecommendations(Long itemId, int limit) {
-        if (itemId == null)
-            return getPopularItems(limit);
+    @Cacheable(
+            value = CacheNames.RECOMMENDATIONS,
+            key = "'personalized:' + (#context != null ? #context.name() : 'ANY') + ':' + #limit")
+    public RecommendationResponse getPersonalizedRecommendations(RecommendationContext context, int limit) {
+        int safeLimit = sanitizeLimit(limit);
+        RecommendationContext safeContext = context != null ? context : RecommendationContext.ANY;
 
-        List<Long> associatedIds = orderItemRepository.findTopAssociatedItems(itemId, PageRequest.of(0, limit * 2));
+        List<MenuItem> candidates = findByContext(safeContext, safeLimit);
+        List<MenuItem> items = fillWithPopularItems(candidates, safeLimit);
 
-        if (associatedIds == null || associatedIds.isEmpty())
-            return getPopularItems(limit);
-
-        Map<Long, MenuItem> byId = menuItemRepository.findAllById(associatedIds).stream()
-                .filter(item -> Boolean.TRUE.equals(item.getActive()))
-                .collect(Collectors.toMap(MenuItem::getId, item -> item, (a, b) -> a));
-
-        return associatedIds.stream()
-                .filter(byId::containsKey)
-                .limit(limit)
-                .map(id -> convertToResponse(byId.get(id)))
-                .collect(Collectors.toList());
+        return recommendationMapper.toResponse(
+                RecommendationType.PERSONALIZED, safeContext, safeLimit, items, reasonForContext(safeContext));
     }
 
-    /**
-     * Retrieves similar items based on sales associations.
-     */
     @Transactional(readOnly = true)
-    @Cacheable(value = "recommendations", key = "'similar_' + #itemId + '_' + #limit")
-    public List<MenuItemResponse> getRecommendations(Long itemId, int limit) {
-        return getCrossSellRecommendations(itemId, limit);
-    }
+    @Cacheable(value = CacheNames.RECOMMENDATIONS, key = "'popular:' + #limit")
+    public RecommendationResponse getPopularItems(int limit) {
+        int safeLimit = sanitizeLimit(limit);
 
-    /**
-     * Identifies the most popular items across the entire menu based on historical
-     * volume.
-     * 
-     * @param limit Maximum number of items
-     * @return List of trending menu items
-     */
-    @Transactional(readOnly = true)
-    @Cacheable(value = "popularItems", key = "'pop_' + #limit")
-    public List<MenuItemResponse> getPopularItems(int limit) {
-        List<Long> topIds = orderItemRepository.findTopSellingItemIds(PageRequest.of(0, limit * 2));
+        List<MenuItem> items = orderItemRepository.findPopularAvailableMenuItems(PageRequest.of(0, safeLimit));
 
-        List<MenuItem> items;
-        if (topIds == null || topIds.isEmpty()) {
-            items = menuItemRepository.findAllByActiveTrue().stream()
-                    .sorted(Comparator.comparing(MenuItem::getCreatedAt).reversed())
-                    .limit(limit)
-                    .collect(Collectors.toList());
-        } else {
-            // Re-sort by original SQL ordering to preserve popularity ranking
-            Map<Long, MenuItem> byId = menuItemRepository.findAllById(topIds).stream()
-                    .filter(item -> Boolean.TRUE.equals(item.getActive()))
-                    .collect(Collectors.toMap(MenuItem::getId, item -> item, (a, b) -> a));
-
-            items = topIds.stream()
-                    .filter(byId::containsKey)
-                    .limit(limit)
-                    .map(byId::get)
-                    .collect(Collectors.toList());
+        if (items.isEmpty()) {
+            items = findLatestAvailableItems(safeLimit);
         }
 
-        return items.stream()
-                .map(this::convertToResponse)
-                .collect(Collectors.toList());
+        return recommendationMapper.toResponse(
+                RecommendationType.POPULAR, RecommendationContext.ANY, safeLimit, items, "Món đang được gọi nhiều");
     }
 
-    /**
-     * Provides personalized recommendations by scoring items against current time
-     * and historical sales popularity.
-     * Implements a Weighted Scoring algorithm (Time: 60%, Popularity: 40%).
-     * 
-     * @param timeContext Current time description (e.g., "morning", "dinner")
-     * @param limit       Maximum number of results
-     * @return Ranked list of contextually appropriate menu items
-     */
     @Transactional(readOnly = true)
-    public List<MenuItemResponse> getPersonalizedRecommendations(String timeContext, int limit) {
-        List<MenuItem> activeMenu = menuItemRepository.findAllByActiveTrue();
-        if (activeMenu.isEmpty())
-            return List.of();
+    @Cacheable(value = CacheNames.RECOMMENDATIONS, key = "'crossSell:' + #itemId + ':' + #limit")
+    public RecommendationResponse getCrossSellRecommendations(@NonNull Long itemId, int limit) {
+        int safeLimit = sanitizeLimit(limit);
+        MenuItem sourceItem = getPublicAvailableMenuItem(itemId);
 
-        Map<Long, Long> popularityMap = getPopularityMap(activeMenu);
-        String tKey = normalize(timeContext);
+        List<MenuItem> candidates =
+                orderItemRepository.findCrossSellAvailableMenuItems(itemId, PageRequest.of(0, safeLimit));
 
-        return activeMenu.stream()
-                .map(item -> {
-                    double score = calculateItemScore(item, tKey, popularityMap.getOrDefault(item.getId(), 0L));
-                    return new AbstractMap.SimpleEntry<>(item, score);
-                })
-                .filter(entry -> entry.getValue() > 0)
-                .sorted(Map.Entry.<MenuItem, Double>comparingByValue().reversed())
+        List<MenuItem> items = fillWithSimilarAndPopularItems(candidates, sourceItem, safeLimit);
+
+        return recommendationMapper.toResponse(
+                RecommendationType.CROSS_SELL,
+                RecommendationContext.ANY,
+                safeLimit,
+                items,
+                "Thường được gọi cùng món này");
+    }
+
+    @Transactional(readOnly = true)
+    @Cacheable(value = CacheNames.RECOMMENDATIONS, key = "'similar:' + #itemId + ':' + #limit")
+    public RecommendationResponse getRecommendations(@NonNull Long itemId, int limit) {
+        int safeLimit = sanitizeLimit(limit);
+        MenuItem sourceItem = getPublicAvailableMenuItem(itemId);
+
+        List<MenuItem> candidates = findSimilarItems(sourceItem, safeLimit);
+        List<MenuItem> items = fillWithPopularItemsExcluding(candidates, sourceItem.getId(), safeLimit);
+
+        return recommendationMapper.toResponse(
+                RecommendationType.SIMILAR,
+                RecommendationContext.ANY,
+                safeLimit,
+                items,
+                "Cùng danh mục với món bạn đang xem");
+    }
+
+    private MenuItem getPublicAvailableMenuItem(Long itemId) {
+        return menuItemRepository
+                .findById(itemId)
+                .filter(this::isPublicAvailable)
+                .orElseThrow(() -> new BusinessException(ErrorCode.MENU_ITEM_NOT_FOUND));
+    }
+
+    private List<MenuItem> findByContext(RecommendationContext context, int limit) {
+        if (context == RecommendationContext.ANY) {
+            return orderItemRepository.findPopularAvailableMenuItems(PageRequest.of(0, limit));
+        }
+
+        List<MenuItem> activeItems = menuItemRepository.findAllByActiveTrueOrderByDisplayOrderAscNameAsc();
+
+        return activeItems.stream()
+                .filter(this::isPublicAvailable)
+                .filter(item -> matchesContext(item, context))
                 .limit(limit)
-                .map(entry -> convertToResponse(entry.getKey()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    /**
-     * Core scoring logic for contextual recommendations.
-     */
-    private double calculateItemScore(MenuItem item, String tKey, long soldCount) {
-        if (item.getCategory() == null)
-            return 0;
+    private List<MenuItem> findSimilarItems(MenuItem sourceItem, int limit) {
+        Category category = sourceItem.getCategory();
 
-        String cateName = item.getCategory().getName().toLowerCase();
+        if (category == null || category.getId() == null) {
+            return List.of();
+        }
 
-        // Weighted attributes: Time alignment + Sales popularity
-        double timeScore = calculateTimeMatch(cateName, tKey) * 60;
-        double popularityScore = Math.min(soldCount / 50.0, 1.0) * 40;
-
-        return timeScore + popularityScore;
+        return menuItemRepository.findSimilarAvailableItems(
+                category.getId(), sourceItem.getId(), PageRequest.of(0, limit));
     }
 
-    /**
-     * Matches category keywords against specific time periods.
-     */
-    private double calculateTimeMatch(String cateName, String tKey) {
-        if (tKey.isBlank())
-            return 0.5;
-        if (containsAny(tKey, "sáng", "morning") &&
-                containsAny(cateName, "Mỳ cay", "Trà", "Soda", "Giải Khát", "Trà Sữa"))
-            return 1.0;
-        if (containsAny(tKey, "trưa", "lunch") &&
-                containsAny(cateName, "Ăn Vặt", "Trà Sữa", "Nước Ép"))
-            return 1.0;
-        if (containsAny(tKey, "chiều", "afternoon") &&
-                containsAny(cateName, "Ăn Vặt", "Trà Sữa", "Nước Ép"))
-            return 1.0;
-        if (containsAny(tKey, "tối", "dinner") &&
-                containsAny(cateName, "Ăn Vặt", "Giải Khát", "Mỳ cay", "Trà Sữa", "Trà - Soda", "Nước Ép"))
-            return 1.0;
-        return 0.1;
+    private List<MenuItem> fillWithSimilarAndPopularItems(List<MenuItem> candidates, MenuItem sourceItem, int limit) {
+        List<MenuItem> merged = new ArrayList<>(candidates);
+
+        if (merged.size() < limit) {
+            merged.addAll(findSimilarItems(sourceItem, limit));
+        }
+
+        if (merged.size() < limit) {
+            merged.addAll(orderItemRepository.findPopularAvailableMenuItems(PageRequest.of(0, limit)));
+        }
+
+        if (merged.size() < limit) {
+            merged.addAll(findLatestAvailableItems(limit));
+        }
+
+        return distinctLimitExcluding(merged, sourceItem.getId(), limit);
     }
 
-    /**
-     * Batch retrieves sales volume for a list of items to calculate popularity
-     * scores efficiently.
-     */
-    private Map<Long, Long> getPopularityMap(List<MenuItem> items) {
-        List<Long> ids = items.stream().map(MenuItem::getId).collect(Collectors.toList());
-        List<Object[]> results = orderItemRepository.countTotalSoldBatch(ids);
-        return results.stream().collect(Collectors.toMap(
-                res -> ((Number) res[0]).longValue(),
-                res -> ((Number) res[1]).longValue()));
+    private List<MenuItem> fillWithPopularItems(List<MenuItem> candidates, int limit) {
+        return fillWithPopularItemsExcluding(candidates, null, limit);
     }
 
-    /**
-     * Maps a MenuItem entity to its Response DTO, including nested options and
-     * values.
-     */
-    private MenuItemResponse convertToResponse(MenuItem item) {
-        List<MenuItemResponse.ItemOptionResponse> options = new ArrayList<>();
+    private List<MenuItem> fillWithPopularItemsExcluding(List<MenuItem> candidates, Long excludedItemId, int limit) {
+        List<MenuItem> merged = new ArrayList<>(candidates);
 
-        if (item.getItemOptions() != null) {
-            for (var opt : item.getItemOptions()) {
-                if (opt.isDeleted())
-                    continue;
+        if (merged.size() < limit) {
+            merged.addAll(orderItemRepository.findPopularAvailableMenuItems(PageRequest.of(0, limit)));
+        }
 
-                List<MenuItemResponse.ItemOptionValueResponse> values = new ArrayList<>();
-                if (opt.getOptionValues() != null) {
-                    for (var val : opt.getOptionValues()) {
-                        if (val.isDeleted())
-                            continue;
-                        values.add(MenuItemResponse.ItemOptionValueResponse.builder()
-                                .id(val.getId())
-                                .name(val.getName())
-                                .extraPrice(val.getExtraPrice())
-                                .build());
-                    }
-                }
+        if (merged.size() < limit) {
+            merged.addAll(findLatestAvailableItems(limit));
+        }
 
-                options.add(MenuItemResponse.ItemOptionResponse.builder()
-                        .id(opt.getId())
-                        .name(opt.getName())
-                        .isRequired(opt.isRequired())
-                        .maxSelection(opt.getMaxSelection())
-                        .optionValues(values)
-                        .build());
+        return distinctLimitExcluding(merged, excludedItemId, limit);
+    }
+
+    private List<MenuItem> findLatestAvailableItems(int limit) {
+        return menuItemRepository.findByActiveTrueAndAvailableTrueOrderByIdDesc(PageRequest.of(0, limit));
+    }
+
+    private List<MenuItem> distinctLimitExcluding(List<MenuItem> items, Long excludedItemId, int limit) {
+        Map<Long, MenuItem> distinctItems = new LinkedHashMap<>();
+
+        for (MenuItem item : items) {
+            if (item == null || item.getId() == null) {
+                continue;
+            }
+
+            if (excludedItemId != null && excludedItemId.equals(item.getId())) {
+                continue;
+            }
+
+            if (!isPublicAvailable(item)) {
+                continue;
+            }
+
+            distinctItems.putIfAbsent(item.getId(), item);
+
+            if (distinctItems.size() >= limit) {
+                break;
             }
         }
 
-        return MenuItemResponse.builder()
-                .id(item.getId())
-                .name(item.getName())
-                .price(item.getPrice())
-                .img(item.getImg())
-                .active(item.getActive())
-                .category(item.getCategory() != null ? MenuItemResponse.CategorySummary.builder()
-                        .id(item.getCategory().getId())
-                        .name(item.getCategory().getName())
-                        .build() : null)
-                .itemOptions(options)
-                .build();
+        return new ArrayList<>(distinctItems.values());
     }
 
-    private String normalize(String input) {
-        return input != null ? input.toLowerCase().trim() : "";
-    }
-
-    private boolean containsAny(String text, String... keywords) {
-        for (String kw : keywords) {
-            if (text.contains(kw.toLowerCase()))
-                return true;
+    private boolean isPublicAvailable(MenuItem item) {
+        if (item == null) {
+            return false;
         }
+
+        Category category = item.getCategory();
+
+        return Boolean.TRUE.equals(item.getActive())
+                && Boolean.TRUE.equals(item.getAvailable())
+                && category != null
+                && Boolean.TRUE.equals(category.getActive());
+    }
+
+    private boolean matchesContext(MenuItem item, RecommendationContext context) {
+        Category category = item.getCategory();
+
+        String itemName = normalize(item.getName());
+        String categoryName = category != null ? normalize(category.getName()) : "";
+
+        return switch (context) {
+            case MORNING -> containsAny(itemName, categoryName, "tra sua", "an vat", "soda", "nuoc", "my cay");
+
+            case LUNCH -> containsAny(itemName, categoryName, "tra sua", "an vat", "soda", "nuoc", "my cay");
+
+            case AFTERNOON -> containsAny(itemName, categoryName, "tra sua", "an vat", "soda", "nuoc", "my cay");
+
+            case DINNER -> containsAny(
+                    itemName, categoryName, "tra sua", "an vat", "soda", "nuoc", "my cay", "giai khat");
+
+            case ANY -> true;
+        };
+    }
+
+    private boolean containsAny(String itemName, String categoryName, String... keywords) {
+        for (String keyword : keywords) {
+            if (itemName.contains(keyword) || categoryName.contains(keyword)) {
+                return true;
+            }
+        }
+
         return false;
+    }
+
+    private int sanitizeLimit(int limit) {
+        if (limit <= 0) {
+            return DEFAULT_LIMIT;
+        }
+
+        return Math.min(limit, MAX_LIMIT);
+    }
+
+    private String reasonForContext(RecommendationContext context) {
+        return switch (context) {
+            case MORNING -> "Phù hợp buổi sáng";
+            case LUNCH -> "Phù hợp bữa trưa";
+            case AFTERNOON -> "Phù hợp buổi chiều";
+            case DINNER -> "Phù hợp bữa tối";
+            case ANY -> "Gợi ý phù hợp cho bạn";
+        };
+    }
+
+    private String normalize(String value) {
+        if (value == null) {
+            return "";
+        }
+
+        String normalized = Normalizer.normalize(value, Normalizer.Form.NFD).replaceAll("\\p{M}", "");
+
+        return normalized.toLowerCase(Locale.ROOT);
     }
 }
